--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
     <section>
         <h2>Наша команда</h2>
         <ul>
-            <il><img src="" alt="photo" class="foto"></il>
+            <li><img src="" alt="photo" class="foto">
             <p>Игорь Демьяненко</p>
-            <p>Product Designer</p>
-            <il><img src="" alt="photo" class="foto"></il>
+            <p>Product Designer</p></li>
+            <li><img src="" alt="photo" class="foto">
             <p>Ольга Репина</p>
-            <p>Frontend Developer</p>           
-            <il><img src="" alt="photo" class="foto"></il>
+            <p>Frontend Developer</p></li>           
+            <li><img src="" alt="photo" class="foto">
             <p>Николай Тарасов</p>
-            <p>Marketing</p>
-            <il><img src="" alt="photo" class="foto"></il>
+            <p>Marketing</p></li>
+            <li><img src="" alt="photo" class="foto">
             <p>Михаил Ермаков</p>
-            <p>UI Designer</p>
+            <p>UI Designer</p></li>
         </ul>
     </section> 
     <!--Footer-->     
