--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="">Портфолио</a></li>              
             <li><a href="">Контакты</a></li>              
             <li><a href="mailto:info@example.com" class="">info@example.com</a></li>
-            <li><a href="tel:+38 099 111 11 11" class="">+38 099 111 11 11</a></li>
+            <li><a href="tel:+380991111111" class="">+38 099 111 11 11</a></li>
          </ul>
     </nav>
     </header>
@@ -79,7 +79,7 @@
             <a href="mailto:info@example.com" class="">info@example.com</a>
         </p>
          <p>
-            <a href="tel:+38 099 111 11 11" class="">+38 099 111 11 11</a>
+            <a href="tel:+380991111111" class="">+38 099 111 11 11</a>
         </p>
     </footer>
 </body>
