--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
-    <title>Главная</title>
+    <title>Document</title>
 </head>
 <body>
-    <!--header-->
+ <!--header-->
     <header>
     <h1>WebStudio</h1>   
     <nav>
@@ -48,25 +47,25 @@
         </ul>
         <h2>Чем мы занимаемся</h2>
         <ul>
-            <li><img src="imag/photo_2022-07-14_23-06-50.jpg" alt="photo" width="370" height="294" class="foto" ></li>
-            <li><img src="imag/photo_2022-07-14_23-08-23.jpg" alt="photo" width="370" height="294" class="foto"></li>            
-            <li><img src="imag/photo_2022-07-14_23-08-29.jpg" alt="photo" width="370" height="294" class="foto"></li>            
+            <li><img src="img/photo_2022-07-14_23-06-50.jpg" alt="photo" width="370" height="294" class="foto" ></li>
+            <li><img src="img/photo_2022-07-14_23-08-23.jpg" alt="photo" width="370" height="294" class="foto"></li>            
+            <li><img src="img/photo_2022-07-14_23-08-29.jpg" alt="photo" width="370" height="294" class="foto"></li>            
         </ul>
     </section>
     <!--section_3--> 
     <section>
         <h2>Наша команда</h2>
         <ul>
-            <li><img src="/imag/photo_2022-07-14_22-47-18.jpg" alt="photo" width="270" height="260" class="foto">
+            <li><img src="img/photo_2022-07-14_22-47-18.jpg" alt="photo" width="270" height="260" class="foto">
             <p>Игорь Демьяненко</p>
             <p>Product Designer</p></li>
-            <li><img src="/imag/photo_2022-07-14_23-00-56.jpg" alt="photo" width="270" height="260" class="foto">
+            <li><img src="img/photo_2022-07-14_23-00-56.jpg" alt="photo" width="270" height="260" class="foto">
             <p>Ольга Репина</p>
             <p>Frontend Developer</p></li>           
-            <li><img src="/imag/photo_2022-07-14_23-04-40.jpg" alt="photo" width="270" height="260" class="foto">
+            <li><img src="img/photo_2022-07-14_23-04-40.jpg" alt="photo" width="270" height="260" class="foto">
             <p>Николай Тарасов</p>
             <p>Marketing</p></li>
-            <li><img src="/imag/photo_2022-07-14_23-06-06.jpg" alt="photo" width="270" height="260" class="foto">
+            <li><img src="img/photo_2022-07-14_23-06-06.jpg" alt="photo" width="270" height="260" class="foto">
             <p>Михаил Ермаков</p>
             <p>UI Designer</p></li>
         </ul>
