--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--section_1-->
     <section>
         <h2>Эффективные решения для вашего бизнеса</h2>
-        <h4>Заказать услугу</h4>
+        <button><h4>Заказать услугу</h4></button>
     </section>
     <!--section_2-->  
     <section>
