--- a/index.html
+++ b/index.html
@@ -1,85 +1,145 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
- <!--header-->
+  </head>
+  <body>
+    <!--header-->
     <header>
-    <h1>WebStudio</h1>   
-    <nav>
+      <h1>WebStudio</h1>
+      <nav>
         <ul>
-            <li><a href="">Студия</a></li>            
-            <li><a href="">Портфолио</a></li>              
-            <li><a href="">Контакты</a></li>              
-            <li><a href="mailto:info@example.com" class="">info@example.com</a></li>
-            <li><a href="tel:+380991111111" class="">+38 099 111 11 11</a></li>
-         </ul>
-    </nav>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@example.com" class="">info@example.com</a></li>
+        <li><a href="tel:+380991111111" class="">+38 099 111 11 11</a></li>
+      </ul>
     </header>
     <!--section_1-->
     <section>
-        <h2>Эффективные решения для вашего бизнеса</h2>
-        <button><h4>Заказать услугу</h4></button>
+      <a href="index.html" class=""><h1>Эффективные решения для вашего бизнеса</h1></a>
+      <button type="button">Заказать услугу</button>
     </section>
-    <!--section_2-->  
+    <!--section_2-->
     <section>
-        <ul>
-            <li>
-                <h3>Внимание к деталям</h3>  
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
-            <li>
-                <h3>Пунктуальность</h3>  
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li>
-            <li>
-                <h3>Планирование</h3>  
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
-            <li>
-                <h3>Современные технологии</h3>  
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
-        </ul>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-            <li><img src="img/photo_2022-07-14_23-06-50.jpg" alt="photo" width="370" height="294" class="foto" ></li>
-            <li><img src="img/photo_2022-07-14_23-08-23.jpg" alt="photo" width="370" height="294" class="foto"></li>            
-            <li><img src="img/photo_2022-07-14_23-08-29.jpg" alt="photo" width="370" height="294" class="foto"></li>            
-        </ul>
+      <h2>Описание деятельности</h2>
+      <ul>
+        <li>
+          <h3>Внимание к деталям</h3>
+          <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        </li>
+        <li>
+          <h3>Пунктуальность</h3>
+          <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+        </li>
+        <li>
+          <h3>Планирование</h3>
+          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+        </li>
+        <li>
+          <h3>Современные технологии</h3>
+          <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+        </li>
+      </ul>
     </section>
-    <!--section_3--> 
+    <!--section_3-->
     <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li><img src="img/photo_2022-07-14_22-47-18.jpg" alt="photo" width="270" height="260" class="foto">
-            <p>Игорь Демьяненко</p>
-            <p>Product Designer</p></li>
-            <li><img src="img/photo_2022-07-14_23-00-56.jpg" alt="photo" width="270" height="260" class="foto">
-            <p>Ольга Репина</p>
-            <p>Frontend Developer</p></li>           
-            <li><img src="img/photo_2022-07-14_23-04-40.jpg" alt="photo" width="270" height="260" class="foto">
-            <p>Николай Тарасов</p>
-            <p>Marketing</p></li>
-            <li><img src="img/photo_2022-07-14_23-06-06.jpg" alt="photo" width="270" height="260" class="foto">
-            <p>Михаил Ермаков</p>
-            <p>UI Designer</p></li>
-        </ul>
-    </section> 
-    <!--Footer-->     
+      <h2>Чем мы занимаемся</h2>
+      <ul>
+        <li>
+          <img
+            src="images/photo_2022-07-14_23-06-50.jpg"
+            alt="photo"
+            width="370"
+            height="294"
+            class="foto"
+          />
+        </li>
+        <li>
+          <img
+            src="images/photo_2022-07-14_23-08-23.jpg"
+            alt="photo"
+            width="370"
+            height="294"
+            class="foto"
+          />
+        </li>
+        <li>
+          <img
+            src="images/photo_2022-07-14_23-08-29.jpg"
+            alt="photo"
+            width="370"
+            height="294"
+            class="foto"
+          />
+        </li>
+      </ul>
+    </section>
+    <!--section_4-->
+    <section>
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img
+            src="images/photo_2022-07-14_22-47-18.jpg"
+            alt="photo"
+            width="270"
+            height="260"
+            class="foto"
+          />
+          <h3>Игорь Демьяненко</h3>
+          <p lang="en">Product Designer</p>
+        </li>
+        <li>
+          <img
+            src="images/photo_2022-07-14_23-00-56.jpg"
+            alt="photo"
+            width="270"
+            height="260"
+            class="foto"
+          />
+          <h3>Ольга Репина</h3>
+          <p lang="en">Frontend Developer</p>
+        </li>
+        <li>
+          <img
+            src="images/photo_2022-07-14_23-04-40.jpg"
+            alt="photo"
+            width="270"
+            height="260"
+            class="foto"
+          />
+          <h3>Николай Тарасов</h3>
+          <p lang="en">Marketing</p>
+        </li>
+        <li>
+          <img
+            src="images/photo_2022-07-14_23-06-06.jpg"
+            alt="photo"
+            width="270"
+            height="260"
+            class="foto"
+          />
+          <h3>Михаил Ермаков</h3>
+          <p lang="en">UI Designer</p>
+        </li>
+      </ul>
+    </section>
+    <!--Footer-->
     <footer>
-        <h3>WebStudio</h3>
-        <address>г. Киев, пр-т Леси Украинки, 26.</address>
-        <p> 
-            <a href="mailto:info@example.com" class="">info@example.com</a>
-        </p>
-         <p>
-            <a href="tel:+380991111111" class="">+38 099 111 11 11</a>
-        </p>
+      <a href="index.html" class="">WebStudio</a>
+      <address>г. Киев, пр-т Леси Украинки, 26.</address>
+      <ul>
+        <li><a href="mailto:info@example.com" class="">info@example.com</a></li>
+        <li><a href="tel:+380991111111" class="">+38 099 111 11 11</a></li>
+      </ul>
     </footer>
-</body>
+  </body>
 </html>
