--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <!--section_1-->
     <section>
-      <a href="index.html" class=""><h1>Эффективные решения для вашего бизнеса</h1></a>
+      <a href="index.html" class="">Эффективные решения для вашего бизнеса</a>
       <button type="button">Заказать услугу</button>
     </section>
     <!--section_2-->
