--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!--header-->
     <header>
-      <h1>WebStudio</h1>
+      <a href="index.html" class="">WebStudio</a>
       <nav>
         <ul>
           <li><a href="">Студия</a></li>
@@ -24,7 +24,7 @@
     </header>
     <!--section_1-->
     <section>
-      <a href="index.html" class="">Эффективные решения для вашего бизнеса</a>
+      <h1>Эффективные решения для вашего бизнеса</h1>
       <button type="button">Заказать услугу</button>
     </section>
     <!--section_2-->
