--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
     <!--Footer-->
     <footer>
       <a href="index.html" class="">WebStudio</a>
-      <address>г. Киев, пр-т Леси Украинки, 26.</address>
       <ul>
+        <li><address>г. Киев, пр-т Леси Украинки, 26.</address></li>
         <li><a href="mailto:info@example.com" class="">info@example.com</a></li>
         <li><a href="tel:+380991111111" class="">+38 099 111 11 11</a></li>
       </ul>
