--- a/index.html
+++ b/index.html
@@ -135,11 +135,19 @@
     <!--Footer-->
     <footer>
       <a href="index.html" class="">WebStudio</a>
-      <ul>
-        <li><address>г. Киев, пр-т Леси Украинки, 26.</address></li>
-        <li><a href="mailto:info@example.com" class="">info@example.com</a></li>
-        <li><a href="tel:+380991111111" class="">+38 099 111 11 11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li>
+            <a class="adress" href="#" target="_blank" rel="">г. Киев, пр-т Леси Украинки, 26.</a>
+          </li>
+          <li>
+            <a href="mailto:info@example.com" class="">info@example.com</a>
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
