--- a/index.html
+++ b/index.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Головна</title>
   </head>
   <body>
     <!--header-->
     <header>
-      <a href="index.html" class="">WebStudio</a>
+      <a href="index.html" class="" lang="en">WebStudio</a>
       <nav>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@example.com" class="">info@example.com</a></li>
-        <li><a href="tel:+380991111111" class="">+38 099 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com" class="">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!--section_1-->
     <section>
-      <h1>Эффективные решения для вашего бизнеса</h1>
-      <button type="button">Заказать услугу</button>
+      <h1>Ефективні рішення для вашого бізнесу</h1>
+      <button type="button">Замовити послугу</button>
     </section>
     <!--section_2-->
     <section>
-      <h2>Описание деятельности</h2>
+      <h2>Опис діятельності</h2>
       <ul>
         <li>
-          <h3>Внимание к деталям</h3>
-          <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+          <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
         </li>
         <li>
-          <h3>Пунктуальность</h3>
-          <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+          <h3>ПУНКТУАЛЬНІСТЬ</h3>
+          <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li>
-          <h3>Планирование</h3>
-          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+          <h3>ПЛАНУВАННЯ</h3>
+          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
         <li>
-          <h3>Современные технологии</h3>
-          <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
       </ul>
     </section>
     <!--section_3-->
     <section>
-      <h2>Чем мы занимаемся</h2>
+      <h2>Чим ми займаємося</h2>
       <ul>
         <li>
           <img
@@ -94,7 +94,7 @@
             height="260"
             class="foto"
           />
-          <h3>Игорь Демьяненко</h3>
+          <h3>Ігор Дем'яненко</h3>
           <p lang="en">Product Designer</p>
         </li>
         <li>
@@ -105,7 +105,7 @@
             height="260"
             class="foto"
           />
-          <h3>Ольга Репина</h3>
+          <h3>Ольга Рєпіна</h3>
           <p lang="en">Frontend Developer</p>
         </li>
         <li>
@@ -116,7 +116,7 @@
             height="260"
             class="foto"
           />
-          <h3>Николай Тарасов</h3>
+          <h3>Микола Тарасов</h3>
           <p lang="en">Marketing</p>
         </li>
         <li>
@@ -127,24 +127,24 @@
             height="260"
             class="foto"
           />
-          <h3>Михаил Ермаков</h3>
+          <h3>Михайло Єрмаков</h3>
           <p lang="en">UI Designer</p>
         </li>
       </ul>
     </section>
     <!--Footer-->
     <footer>
-      <a href="index.html" class="">WebStudio</a>
+      <a href="index.html" class="" lang="en">WebStudio</a>
       <address>
         <ul>
           <li>
-            <a class="adress" href="#" target="_blank" rel="">г. Киев, пр-т Леси Украинки, 26.</a>
+            <a class="adress" href="#" target="_blank" rel="">м. Київ, пр-т Лесі Українки, 26</a>
           </li>
           <li>
-            <a href="mailto:info@example.com" class="">info@example.com</a>
+            <a href="mailto:info@devstudio.com" class="">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380991111111" class="">+38 099 111 11 11</a>
+            <a href="tel:+380961111111" class="">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
